criaçaõ do CarimboProjetoAdapter

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,7 +8,7 @@
 
     <include
         android:id="@+id/toolbarHome"
-        layout="@layout/fragment_toolbar_home"></include>
+        layout="@layout/fragment_toolbar_home" />
 
 
     <TextView
