--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,7 +7,7 @@
    >
 
     <include
-        android:id="@+id/toolbarHome"
+        android:id="@+id/toolbarHomeInclude"
         layout="@layout/fragment_toolbar_home" />
 
 
