--- a/app/src/main/res/layout/acitivity_spt.xml
+++ b/app/src/main/res/layout/acitivity_spt.xml
@@ -6,15 +6,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/containerSpt"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:defaultNavHost="true"
         app:layout_constraintBottom_toTopOf="@+id/buttonContinue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:context=".ui.spt.SptActivity" />
+        app:navGraph="@navigation/spt_nav_graph" />
 
     <Button
         android:id="@+id/buttonContinue"
@@ -47,4 +49,5 @@
         app:layout_constraintStart_toEndOf="@+id/buttonContinue"
         app:layout_constraintTop_toTopOf="@+id/buttonContinue"
         app:srcCompat="@drawable/icon_fab_add" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
