organizado tela de CarimboProjeto, imageviewprofile aparecendo

--- a/app/src/main/res/layout/adapter_carimbo_projeto.xml
+++ b/app/src/main/res/layout/adapter_carimbo_projeto.xml
@@ -16,6 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:errorEnabled="true"
+            android:hint="substitua hint"
+            android:textColorHint="@color/black"
             app:errorIconDrawable="@drawable/ic_erro"
             app:helperText="substitua observação"
             app:hintEnabled="true"
@@ -25,7 +27,6 @@
                 android:id="@+id/textInputEditTextNameProjeto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Substitua hint"
                 android:inputType="textAutoComplete" />
 
         </com.google.android.material.textfield.TextInputLayout>
